docs/k8s/media-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-service-module
  labels:
    app: media-service-module
  replicas: 1
  selector:
    matchLabels:
      app: media-service-module
  template:
    metadata:
      labels:
        app: media-service-module
    spec:
      containers:
        - name: media-service-module
          image: vishwaghimire/media-service-service:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: media-service-service
spec:
  selector:
    app: media-service-module
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
