docs/k8s/rating-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rating-module
  labels:
    app: rating-module
  replicas: 1
  selector:
    matchLabels:
      app: rating-module
  template:
    metadata:
      labels:
        app: rating-module
    spec:
      containers:
        - name: rating-module
          image: vishwaghimire/rating-service:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: rating-service
spec:
  selector:
    app: rating-module
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
